@@ -11,7 +11,7 @@ from waflib.extras import autowaf
 # major increment <=> incompatible changes
 # minor increment <=> compatible changes (additions)
 # micro increment <=> no interface changes
-SERD_VERSION       = '0.30.10'
+SERD_VERSION       = '0.30.11'
 SERD_MAJOR_VERSION = '0'
 
 # Mandatory waf variables
