@@ -1,3 +1,9 @@
+serd (0.30.11) unstable;
+
+  * Fix writing long literals with triple quotes
+
+ -- David Robillard <d@drobilla.net>  Mon, 15 Feb 2021 16:34:35 +0000
+
 serd (0.30.10) stable;
 
   * Add fallback configuration if documentation theme is unavailable
